--- a/about.html
+++ b/about.html
@@ -17,5 +17,6 @@
             document.querySelector("nav").innerHTML = html;
             });
     </script>
+    <footer></footer>
 </body>
 </html>
