--- a/blog-posts/post-6.html
+++ b/blog-posts/post-6.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/ex3/">
+    <base href="../">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
@@ -108,7 +108,7 @@
             <h2 class="blog-card-desc">Sustainable coffee practices for couples</h2>
         </a>
     </div>
-
+    <footer></footer>  
     <script src="js/main.js"></script>
 </body>
 </html>
