--- a/index.html
+++ b/index.html
@@ -109,33 +109,7 @@
             </p>
         </div>
     </section>
-    <footer>
-        <div class="footer-contact">
-            <h2 class="contact-title">Stay in the loop with Brew Haven</h2>
-            <div class="input-wrapper">
-                <input type="text" placeholder="Enter your email">
-                <button type="submit" class="footer-contact-button">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
-            </div>
-            <a href="tel:+015982694756" class="footer-contact-link">+015982694756</a>
-            <a href="mailto:Info@example.com" class="footer-contact-link">Info@example.com</a>
-        </div>
-        <div class="information">
-            <h2 class="information-title">Our location</h2>
-            <p class="information-detail">123 Brew Street Coffeeville, CA 90210</p>
-            <h2 class="information-title">Our location</h2>
-            <p class="information-detail">123 Brew Street Coffeeville, CA 90210</p>
-            <button class="main-button">View all locations</button>
-        </div>
-        <div class="information">
-            <h2 class="information-title">Our location</h2>
-            <p class="information-detail">123 Brew Street Coffeeville, CA 90210</p>
-            <h2 class="information-title">Our location</h2>
-            <p class="information-detail">123 Brew Street Coffeeville, CA 90210</p>
-            <button class="main-button">View all locations</button>
-        </div>
-    </footer>
+    <footer></footer>
     <script src="js/main.js"></script>
 </body>
 </html>
