--- a/blog.html
+++ b/blog.html
@@ -67,6 +67,7 @@
             <h2 class="blog-card-desc">Seasonal specials and what's brewing this month</h2>
         </a>
     </div>
+    <footer></footer>
     <script src="js/main.js"></script>
 </body>
 </html>
