--- a/policy.html
+++ b/policy.html
@@ -60,6 +60,7 @@
             The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
         </p>
     </div>
+    <footer></footer>
     <script src="js/main.js"></script>
 </body>
 </html>
