--- a/services.html
+++ b/services.html
@@ -259,7 +259,7 @@
         </label>
         <button type="submit">Đặt món</button>
     </form>
-    
+    <footer></footer>
     <script src="js/main.js"></script>
 </body>
 </html>
