--- a/footer/footer.html
+++ b/footer/footer.html
@@ -16,6 +16,7 @@
         <li class="footer-link"><a href="services.html">Menu</a></li>
         <li class="footer-link"><a href="about.html">About</a></li>
         <li class="footer-link"><a href="blog.html">Blog</a></li>
+        <li class="footer-link"><a href="map.html">Locations</a></li>
         <li class="footer-link"><a href="contact.html" class="">Contact</a></li>
         <li class="footer-link"><a href="policy.html">Policy</a></li>
         <li class="footer-link"></li>
