--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="card-description">
                 Whether you're a poet or a poetry lover, come and share your work or simply listen and be moved by the words of others.
             </p>
-            <a href="#" class="read-more">Read more -></a>
+            <a href="#" class="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
         </article>
 
         <!-- Live music nights -->
@@ -45,7 +45,7 @@
             <p class="card-description">
                 We feature local artists and bands, creating a lively atmosphere where you can relax with a cup of coffee.
             </p>
-            <a href="#" class="read-more">Read more -></a>
+            <a href="#" class="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
         </article>
 
         <!-- Special guest appearances -->
@@ -57,7 +57,7 @@
             <p class="card-description">
                 Brew Haven is the perfect venue for your private events and celebrations.
             </p>
-            <a href="#" class="read-more">Read more -></a>
+            <a href="#" class="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
         </article>
     </section>
     <section class="comments">
@@ -108,6 +108,51 @@
                 Sarah Johnson
             </p>
         </div>
+    </section>
+   <section class="achievements">
+
+        <div class="achievement">
+            <h1 class="achievement-title">10<span class="orange-title">K</span></h1>
+            <h4 class="achievement-sub-title">Happy customers</h4>
+            <p class="achievement-desc">We have served over 10,000 happy customers and counting.</p>
+        </div>
+
+        <div class="achievement">
+            <h1 class="achievement-title">05<span class="orange-title">+</span></h1>
+            <h4 class="achievement-sub-title">Years in business</h4>
+            <p class="achievement-desc">Our baristas have expertly crafted over 50,000 cups of coffee.</p>
+        </div>
+
+        <div class="achievement">
+            <h1 class="achievement-title">200<span class="orange-title">+</span></h1>
+            <h4 class="achievement-sub-title">Daily visitors</h4>
+            <p class="achievement-desc">We welcome over 200 daily visitors, each enjoying our expertly crafted coffee.</p>
+        </div>
+
+        <div class="achievement">
+            <h1 class="achievement-title">30<span class="orange-title">K</span></h1>
+            <h4 class="achievement-sub-title">Pastries baked</h4>
+            <p class="achievement-desc">From croissants to muffins, our bakery has produced over 30,000 fresh.</p>
+        </div>
+    </section>
+    <section class="story-1">
+        <div class="story-1-wrapper">
+            <h1 class="story-1-title">Spread the love with your own just love coffee cafe</h1> <br> <br>
+            <p class="story-1-desc">Our cozy, inviting atmosphere is the perfect place to relax, connect, and enjoy the simple pleasures of life.
+                Whether you're meeting friends, working on a project, or simply savoring a quiet moment, our café is your home away from home.</p>
+                <br> <br> <br> <br>
+            <a href="contact.html" class="main-button">Request for information</a>
+        </div>
+        <div class="story-1-img">
+            <img src="assets/story1.avif" alt="">
+        </div>
+        <div class="story-1-other-img">
+            <img src="assets/story2.avif" alt="" class="pic-a">
+            <img src="assets/story3.avif" alt="" class="pic-b">
+            <img src="assets/story4.avif" alt="" class="pic-c">
+            <img src="assets/story5avif.avif" alt="" class="pic-d">
+        </div>
+
     </section>
     <footer></footer>
     <script src="js/main.js"></script>
