--- a/nav/nav.html
+++ b/nav/nav.html
@@ -14,7 +14,10 @@
         <a href="blog.html" class="nav-link">Blog</a>
     </li>
     <li class="nav-item">
-        <a href="#" class="nav-link">Contact</a>
+        <a href="map.html" class="nav-link">Locations</a>
+    </li>
+    <li class="nav-item">
+        <a href="contact.html" class="nav-link">Contact</a>
     </li>
     <li class="nav-item">
         <a href="policy.html" class="nav-link">Policy</a>
