--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -28,6 +29,46 @@
             <img src="assets/pattern.svg" alt="" class="pattern">
         </div>
     </div>
+    <div class="contact-info">
+        <div class="info-piece">
+            <div class="contact-icon-wrapper">
+                <i class="fa-solid fa-envelope"></i>
+            </div>
+            <h2 class="info-title">Email</h2>
+            <a href="mailto:Info@example.com" class="info-link">Info@example.com</a>
+        </div>  
+
+        <div class="info-piece">
+            <div class="contact-icon-wrapper">
+                <i class="fa-solid fa-phone"></i>
+            </div>
+            <h2 class="info-title">Phone</h2>
+            <a href="tel:1-800-22-66791" class="info-link">1-800-22-66791</a>
+        </div> 
+
+        <div class="info-piece">
+            <div class="contact-icon-wrapper">
+                <i class="fa-solid fa-location-dot"></i>
+            </div>
+            <h2 class="info-title">Address</h2>
+            <a href="map.html" class="info-link">View all locations</a>
+        </div> 
+
+        <div class="info-piece">
+            <div class="contact-icon-wrapper">
+                <i class="fa-solid fa-globe"></i> 
+            </div>
+            <h2 class="info-title">Email</h2>
+            <div class="follow-info">
+                <a href="https://www.facebook.com/xRekzy"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/xRekzy"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/xRekzy"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.facebook.com/xRekzy"><i class="fa-brands fa-pinterest-p"></i></a>
+            </div>
+
+        </div> 
+    </div>
+    
     <footer></footer>
     <script src="js/main.js"></script>
 </body>
