--- a/footer/footer.html
+++ b/footer/footer.html
@@ -25,7 +25,10 @@
 <div class="information">
     <h2 class="information-title">Our location</h2>
     <p class="information-detail">123 Brew Street Coffeeville, CA 90210</p>
-    <h2 class="information-title">Our location</h2>
-    <p class="information-detail">123 Brew Street Coffeeville, CA 90210</p>
-    <button class="main-button">View all locations</button>
+    <br><img src="assets/nut.svg" alt="nut"><br>
+    <h2 class="information-title">Opening hours</h2>
+    <p class="information-detail">Monday - Friday: 7:00 AM - 8:00 PM</p>
+    <p class="information-detail">Saturday - Sunday: 8:00 AM - 6:00 PM</p>
+    <a href="map.html"><button class="main-button">View all locations</button></a>
+    <br><br>
 </div>
