--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             </p>
             <a href="#" class="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
         </article>
-
         <!-- Special guest appearances -->
         <article class="card">
             <h2 class="card-title">Special guest appearances</h2>
@@ -65,47 +64,84 @@
             Comments
         </h2>
         <div class="comment">
-            <div class="starts">
-                5 stars
+            <div class="stars">
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
             </div>
             <p class="opinion">
                 My go-to café for studying. The ambiance is quiet and conducive to getting work done. The Wi-Fi is reliable, and the baristas are friendly. Plus, the coffee keeps me energized!
             </p>
+            <br>
             <p class="user">
                 Sarah Johnson
             </p>
         </div>
         <div class="comment">
-            <div class="starts">
-                5 stars
+            <div class="stars">
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star"></i>
             </div>
             <p class="opinion">
-                My go-to café for studying. The ambiance is quiet and conducive to getting work done. The Wi-Fi is reliable, and the baristas are friendly. Plus, the coffee keeps me energized!
-            </p>
+            The pastries here are some of the best I've ever had. Freshly baked and full of flavor. 
+            The coffee pairs perfectly with their sweet treats. A must-visit for any pastry lover.            </p>
+            <br>
             <p class="user">
-                Sarah Johnson
+                Frances Guerrero
             </p>
         </div>
         <div class="comment">
-            <div class="starts">
-                5 stars
+            <div class="stars">
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
             </div>
             <p class="opinion">
-                My go-to café for studying. The ambiance is quiet and conducive to getting work done. The Wi-Fi is reliable, and the baristas are friendly. Plus, the coffee keeps me energized!
-            </p>
+                The outdoor seating at this café is lovely. Perfect for enjoying a cup of coffee on a sunny day. 
+                The ambiance is great, and the coffee is always satisfying.           </p>
+            <br>
             <p class="user">
-                Sarah Johnson
+                Carolyn Ortiz
             </p>
         </div>
         <div class="comment">
-            <div class="starts">
-                5 stars
+            <div class="stars">
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star"></i>
             </div>
             <p class="opinion">
-                My go-to café for studying. The ambiance is quiet and conducive to getting work done. The Wi-Fi is reliable, and the baristas are friendly. Plus, the coffee keeps me energized!
-            </p>
+                The quality of coffee and food at this café is exceptional. Everything is fresh and made with care. 
+                The staff is attentive and friendly. Definitely worth a visit.           </p>
+            <br>
             <p class="user">
-                Sarah Johnson
+                Joan Wallace
+            </p>
+        </div>
+        <div class="comment">
+            <div class="stars">
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star filled"></i>
+                <i class="fa-solid fa-star"></i>
+            </div>
+            <p class="opinion">
+                This café serves artisan coffee that is simply amazing. You can tell they take pride in their craft.
+                The pastries are also top-notch. A great place for coffee enthusiasts.          </p>
+            <br>
+            <p class="user">
+                Emily
+
             </p>
         </div>
     </section>
