add dark mode + about

--- a/about.html
+++ b/about.html
@@ -3,20 +3,173 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <script src="js/main.js"></script>
 </head>
 <body>
     <nav></nav>
-    <script>
-        fetch("nav/nav.html")
-            .then(res => res.text())
-            .then(html => {
-            document.querySelector("nav").innerHTML = html;
-            });
-    </script>
+        <!-- <div class="intro" style="margin-top: 7%; margin-bottom: 2%;">
+        <h1>Introduction</h1>
+        <h4 style="color: rgb(107, 110, 112); margin-bottom: 2%;">Friendly, high IQ, handsome guy</h4>
+        <h4 style="margin-bottom: 1%;">Here is image about me</h4>
+        <div class="khung">
+            <img src="https://vcdn1-giaitri.vnecdn.net/2026/01/25/cha-eun-woo-1769343072-1769343-3523-4891-1769343679.jpg?w=500&h=300&q=100&dpr=1&fit=crop&s=tYtctWG57EYrk_JOP48dkQ"
+             alt="dinh hung image" class="dinh-hung-image">
+        </div>
+
+    </div>
+    <div class = "journey">
+        <div>
+            <p>Founded with a mission to create a space where 
+            <br>
+            people can connect and enjoy the simple pleasures of life, 
+            <br>
+            Just Love Coffee Cafe has grown from a small idea into a 
+            <br>
+            beloved local spot. Our journey began with a love for 
+            <br>
+            coffee and a desire to share that love with our 
+            community.</p>
+        </div>
+        <div>
+            <div class="our-journey-list">
+                 <img src="https://cdn.prod.website-files.com/6698a00bd7ed29b65b5b34e9/66dc23304a2c1e5e025b2303_checkmark.svg" 
+                loading="eager" alt class ="our-journey-list-icon"> -->
+                <!-- <div>From a dream to reality</div>
+            </div>
+            <div class="our-journey-list">
+                <div>Opening our doors</div>
+            </div>
+            <div class="our-journey-list">
+                <div>The perfect brew</div>
+            </div>
+        </div>
+        <div>
+            <div class="our-journey-list">
+                <div>Growing with our community</div>
+            </div>
+            <div class="our-journey-list">
+                <div>Savings strategies</div>
+            </div>
+            <div class="our-journey-list">
+                <div>The future of just love coffee cafe</div>
+            </div>
+        </div>
+    </div>
+    <div class = "container">
+        <div class="col1">
+            <h1>What we stand for</h1>
+            <div class="row2">
+                <div>
+                    <h2>Quality</h2>
+                    <p>We source our beans from the finest growers around the world, ensuring each cup is a true delight.</p>
+                </div>
+                <div>
+                    <h2>Community</h2>
+                    <p>We’re more than just a cafe. we’re a hub for local events, art, and culture, fostering a sense of community.</p>
+                </div>
+                <div>
+                    <h2>Sustainability</h2>
+                    <p>We’re dedicated to eco-friendly practices, from our packaging to our waste reduction efforts.</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            <img class="wave" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkpWyJIAlGatpem6jY6j_qF3INXTd5s70pXw&s">
+        </div>
+    </div> -->
+    <div class="about">
+        <header class="about-intro">
+            <h1 class="about-title">About Brew haven</h1>
+            <p class="about-desc">Our cafe, located in the heart of is a cozy haven where you can enjoy the finest coffee, delicious food, and a welcoming atmosphere.</p>
+            <br><br>
+            <div class="about-img-wrapper">
+                <img src="assets/about1.avif" alt="Employees making coffee" class="about-img">
+            </div>
+        </header>
+        <br><br><br><br>
+        <div class="about-journey">
+            <h2 class="journey-title">Our journey</h2>      
+            <div class="journey-wrapper">
+                <p class="journey-desc">
+                    Founded with a mission to create a space where people can connect and enjoy the simple pleasures of life, 
+                    Just Love Coffee Cafe has grown from a small idea into a beloved local spot.
+                    Our journey began with a love for coffee and a desire to share that love with our community.
+                </p>
+                <div class="journey-tick">
+                    <div class="tick-piece"><img src="assets/tick.svg" alt="" class="tick"><p>From a dream to reality</p></div>
+                    <div class="tick-piece"><img src="assets/tick.svg" alt="" class="tick"><p>Growing with our community</p></div>
+                    <div class="tick-piece"><img src="assets/tick.svg" alt="" class="tick"><p>Opening our doors</p></div>
+                    <div class="tick-piece"><img src="assets/tick.svg" alt="" class="tick"><p>Savings strategies</p></div>
+                    <div class="tick-piece"><img src="assets/tick.svg" alt="" class="tick"><p>The perfect brew</p></div>
+                    <div class="tick-piece"><img src="assets/tick.svg" alt="" class="tick"><p>The future of just love coffee cafe</p></div>
+                </div>
+            </div>
+        </div>
+        <br><br><br><br>
+        <div class="stand-for">
+            <h2 class="stand-for-title">What We Stand For</h2>
+            <div class="stand-for-wrapper">
+                <div class="stand-for-characters">
+                    <div class="stand-for-character">
+                        <h3 class="character-title">Quality</h3>
+                        <p class="character-desc">We source our beans from the finest growers around the world, ensuring each cup is a true delight.</p>
+                    </div>
+                    <div class="stand-for-character">
+                        <h3 class="character-title">Community</h3>
+                        <p class="character-desc">We’re more than just a cafe. we’re a hub for local events, art, and culture, fostering a sense of community.</p>
+                    </div>
+                    <div class="stand-for-character">
+                        <h3 class="character-title">Sustainability</h3>
+                        <p class="character-desc">We’re dedicated to eco-friendly practices, from our packaging to our waste reduction efforts.</p>
+                    </div>
+                </div>
+                <div class="stand-for-img-wrapper">
+                    <img src="assets/about2.avif" alt="Croissant and cups of coffee" class="stand-for-img">
+                    <img src="assets/pattern.svg" alt="" class="pattern">
+                </div>
+            </div>
+        </div>
+        <br><br><br><br>
+        <div class="employees">
+            <h2 class="employees-title">Meet our team</h2>
+            <div class="employees-wrapper">
+                <div class="employee">
+                    <div class="employee-img-wrapper">
+                        <img src="assets/employee1.avif" alt="Employee 1">
+                    </div>
+                    <div class="employee-detail">
+                        <h3 class="employee-name">Joan Wallace</h3>
+                        <p class="employee-role">Caterer</p>
+                    </div>
+                </div>
+                <div class="employee">
+                    <div class="employee-img-wrapper">
+                        <img src="assets/employee2.avif" alt="Employee 2">
+                    </div>
+                    <div class="employee-detail">
+                        <h3 class="employee-name">Larry Lawson</h3>
+                        <p class="employee-role">Chef Assistant</p>
+                    </div>
+                </div>
+                <div class="employee">
+                    <div class="employee-img-wrapper">
+                        <img src="assets/employee3.avif" alt="Employee 3">
+                    </div>
+                    <div class="employee-detail">
+                        <h3 class="employee-name">Amanda Reed</h3>
+                        <p class="employee-role">Manager</p>
+                    </div>
+                </div>   
+            </div>
+            <br><br><br><br>
+        </div>
+    </div>
+    
+
     <footer></footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
