--- a/nav/nav.html
+++ b/nav/nav.html
@@ -23,3 +23,4 @@
         <a href="policy.html" class="nav-link">Policy</a>
     </li>
 </ul>
+    <button id="theme-toggle"><i class="fa-solid fa-moon"></i></button>
